public img added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Card.png in video , we have to make the html and css of that Design -->
      <div class="container">
         <div class="card">
-            <img src="./lake img.jpg" alt="lake img" height="200px" width="280px">
+            <img src="https://images.pexels.com/photos/247600/pexels-photo-247600.jpeg?cs=srgb&dl=pexels-pixabay-247600.jpg&fm=jpg" alt="lake img" height="200px" width="280px">
             <div class="span-container">
                 <span> Nature</span>
                 <span>Lake</span>
